--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
     "@nrwl/nest": "^13.0.2",
     "core-js": "^3.6.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
+    "rxjs": "~6.6.3",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "12.10.0",
     "@nrwl/eslint-plugin-nx": "13.0.2",
     "@nrwl/jest": "13.0.2",
     "@nrwl/linter": "13.0.2",
+    "@nrwl/nest": "13.0.2",
+    "@nrwl/node": "13.0.2",
     "@nrwl/react": "13.0.2",
     "@nrwl/tao": "12.10.0",
     "@nrwl/web": "13.0.2",
