--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nrwl/nest": "^13.0.2",
+    "@reduxjs/toolkit": "^1.6.2",
     "core-js": "^3.6.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "~6.6.3",
@@ -54,4 +57,3 @@
     "typescript": "~4.3.5"
   }
 }
-
