--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nrwl/nest": "^13.0.2",
     "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "^3.29.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "reflect-metadata": "^0.1.13",
