--- a/package.json
+++ b/package.json
@@ -1,61 +1,61 @@
 {
-  "name": "nest-todos",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test"
-  },
-  "private": true,
-  "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
-    "@nrwl/nest": "^13.0.2",
-    "@reduxjs/toolkit": "^1.6.2",
-    "axios": "^0.21.1",
-    "core-js": "^3.6.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-query": "^3.29.0",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
-    "reflect-metadata": "^0.1.13",
-    "regenerator-runtime": "0.13.7",
-    "rxjs": "~6.6.3",
-    "tslib": "^2.0.0"
-  },
-  "devDependencies": {
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "13.0.2",
-    "@nrwl/eslint-plugin-nx": "13.0.2",
-    "@nrwl/jest": "13.0.2",
-    "@nrwl/linter": "13.0.2",
-    "@nrwl/node": "13.0.2",
-    "@nrwl/react": "13.0.2",
-    "@nrwl/tao": "13.0.2",
-    "@nrwl/web": "13.0.2",
-    "@nrwl/workspace": "13.0.2",
-    "@testing-library/react": "12.1.2",
-    "@testing-library/react-hooks": "7.0.2",
-    "@types/jest": "27.0.2",
-    "@types/node": "14.14.33",
-    "@types/react": "17.0.30",
-    "@types/react-dom": "17.0.9",
-    "@typescript-eslint/eslint-plugin": "~4.33.0",
-    "@typescript-eslint/parser": "~4.33.0",
-    "babel-jest": "27.2.3",
-    "eslint": "7.32.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "jest": "27.2.3",
-    "prettier": "^2.3.1",
-    "ts-jest": "27.0.5",
-    "typescript": "~4.3.5"
-  }
+    "name": "nest-todos",
+    "version": "0.0.0",
+    "license": "MIT",
+    "scripts": {
+        "start": "nx serve",
+        "build": "npx nx run-many --target=serve --parallel=true --all=true",
+        "test": "nx test"
+    },
+    "private": true,
+    "dependencies": {
+        "@nestjs/common": "^7.0.0",
+        "@nestjs/core": "^7.0.0",
+        "@nestjs/platform-express": "^7.0.0",
+        "@nrwl/nest": "^13.0.2",
+        "@reduxjs/toolkit": "^1.6.2",
+        "axios": "^0.21.1",
+        "core-js": "^3.6.5",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-query": "^3.29.0",
+        "react-redux": "^7.2.6",
+        "redux": "^4.1.2",
+        "reflect-metadata": "^0.1.13",
+        "regenerator-runtime": "0.13.7",
+        "rxjs": "~6.6.3",
+        "tslib": "^2.0.0"
+    },
+    "devDependencies": {
+        "@nestjs/schematics": "^7.0.0",
+        "@nestjs/testing": "^7.0.0",
+        "@nrwl/cli": "13.0.2",
+        "@nrwl/eslint-plugin-nx": "13.0.2",
+        "@nrwl/jest": "13.0.2",
+        "@nrwl/linter": "13.0.2",
+        "@nrwl/node": "13.0.2",
+        "@nrwl/react": "13.0.2",
+        "@nrwl/tao": "13.0.2",
+        "@nrwl/web": "13.0.2",
+        "@nrwl/workspace": "13.0.2",
+        "@testing-library/react": "12.1.2",
+        "@testing-library/react-hooks": "7.0.2",
+        "@types/jest": "27.0.2",
+        "@types/node": "14.14.33",
+        "@types/react": "17.0.30",
+        "@types/react-dom": "17.0.9",
+        "@typescript-eslint/eslint-plugin": "~4.33.0",
+        "@typescript-eslint/parser": "~4.33.0",
+        "babel-jest": "27.2.3",
+        "eslint": "7.32.0",
+        "eslint-config-prettier": "8.1.0",
+        "eslint-plugin-import": "2.25.2",
+        "eslint-plugin-jsx-a11y": "6.4.1",
+        "eslint-plugin-react": "7.26.1",
+        "eslint-plugin-react-hooks": "4.2.0",
+        "jest": "27.2.3",
+        "prettier": "^2.3.1",
+        "ts-jest": "27.0.5",
+        "typescript": "~4.3.5"
+    }
 }
