--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "scripts": {
         "start": "nx serve",
-        "build": "npx nx run-many --target=serve --parallel=true --all=true",
+        "build": "npx nx run-many --target=serve --parallel=true --all=true -- configuration=production",
         "test": "nx test"
     },
     "private": true,
@@ -16,6 +16,7 @@
         "@reduxjs/toolkit": "^1.6.2",
         "axios": "^0.21.1",
         "core-js": "^3.6.5",
+        "cross-env": "^7.0.3",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-query": "^3.29.0",
